ajuste ID